# glfw-glad-cmake-linux

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clean.sh  cmake_install.cmake  cmake_make.sh  cmake_run.sh  source
INSTALL GLFW - GLAD - GLEW/: 1_download_zip.sh  basicOptionalRequeriment.sh  install-glfw-glad-glew - plain-text  installGlad.sh  installGlew.sh  installGlfw.sh
INSTALL GLFW - GLAD - GLEW/glfw-3.3.4/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
INSTALL GLFW - GLAD - GLEW/glfw-3.3.4/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
INSTALL GLFW - GLAD - GLEW/glfw-3.3.4/src/: Makefile  cmake_install.cmake
INSTALL GLFW - GLAD - GLEW/glfw-3.3.4/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
source/: CMakeLists.txt  Makefile  cmake_install.cmake  headers.hpp  source  ventana.cpp
src/: headers.hpp  ventana.cpp  ventana.hpp
